--- a/index.html
+++ b/index.html
@@ -1,28 +1,35 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Eric Chen</title>
-    </head>
-    <body>
-        <nav>
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/about">About</a></li>
-                <li><a href="/cv">CV</a></li>
-                <li><a href="/blog">Blog</a></li>
-            </ul>
-        </nav>
-        <div class="container">
-            <div class="blurb">
-                <h1>My name is Eric Chen!</h1>
-                <p>Test paragraph <a href="/about">about me</a></p>
-            </div><!-- /.blurb -->
-        </div><!-- /.container -->
-        <footer>
-            <ul>
-                <li><a href="mailto:echen9898@gmail.com">email</a></li>
-                <li><a href="https://github.com/echen9898">github.com/echen9898</a></li>
-            </ul>
-        </footer>
-    </body>
-</html>
+---
+layout: default
+title: Eric Chen
+image: "/assets/images/profile.png"
+---
+
+		<div>
+
+            <!-- Header -->
+			<h1 class="home_page">Eric Chen</h1>
+
+            <span id="contact_info">
+                <a class="contact_info" href="/assets/documents/resume.pdf">CV</a>
+                <a class="contact_info" href="mailto:echen9898@gmail.com">email</a>
+                <a class="contact_info" href="https://github.com/echen9898">github</a>
+            </span>
+
+            <!-- About Me -->
+            <h4 class="home_page">About me</h4>
+			<p>I am currently a 4th year undergrad at MIT double majoring in Physics and Electrical Engineering / Computer Science (EECS). My research interests include general artificial intelligence and robotics, and I'm fortunate enough to be working on these with <a href="https://people.csail.mit.edu/pulkitag/">Prof. Pulkit Agrawal</a>. I was born and raised in Berkeley CA, and in my free time I love eating <a href="https://www.in-n-out.com/">In-N-Out</a> and spending time with my family.
+            </p>
+
+            <!-- Projects -->
+            <h4 class="home_page">Projects</h4>
+
+            {% for post in site.posts %}
+                <span id="project_listing">
+                    <img class="project_listing" src="{{ post.image }}" alt="" width=100 height=100 />
+                    <a href="{{ post.url }}" class="project_listing">
+                    {{ post.title }}
+                    </a>
+                </span>
+            {% endfor %}
+
+        </div>
