All images switched to jpg from png for faster load times. Minor grammar changes.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Eric Chen
-image: "/assets/images/profile.png"
+image: "/assets/images/profile.jpg"
 ---
 
 		<div>
@@ -17,7 +17,7 @@ image: "/assets/images/profile.png"
 
             <!-- About Me -->
             <h4 class="home_page">About me</h4>
-			<p>I am currently a 4th year undergrad at MIT double majoring in Physics and Electrical Engineering / Computer Science (EECS). My research interests include general artificial intelligence and robotics, and I'm fortunate enough to be working on these with <a href="https://people.csail.mit.edu/pulkitag/">Prof. Pulkit Agrawal</a>. I was born and raised in Berkeley CA, and in my free time I love eating <a href="https://www.in-n-out.com/">In-N-Out</a> and spending time with my family.
+			<p>I am currently a 4th year undergrad at MIT double majoring in Physics and Electrical Engineering / Computer Science (EECS). My research interests include general artificial intelligence and robotics, and I'm fortunate enough to be working on these topics with <a href="https://people.csail.mit.edu/pulkitag/">Prof. Pulkit Agrawal</a>. I was born and raised in Berkeley CA, and in my free time I love eating <a href="https://www.in-n-out.com/">In-N-Out</a> and spending time with my family.
             </p>
 
             <!-- Projects -->
