--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@ image: "/assets/profiles/profile.jpg"
             <!-- Projects -->
             <h4 class="home_page">Projects</h4>
 
-            {% for post in site.posts %}
+            {% assign sorted_posts = (site.posts | sort: 'rank') %}
+            {% for post in sorted_posts %}
                 <span id="project_listing">
                     <img class="project_listing" src="{{ post.image }}" alt="" width=100 height=100 />
-                    <a  target="_blank" href="{{ post.url }}" class="project_listing">
+                    <a href="{{ post.url }}" class="project_listing">
                     {{ post.title }}
                     </a>
                 </span>
