(major)[Bump]: Updated posts
Why:

---------------------------------------------------------------------------------------------------------

How:

---------------------------------------------------------------------------------------------------------

Tags:

References:

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ image: "/assets/profiles/profile.jpg"
 
             <!-- About Me -->
             <h4 class="home_page">About</h4>
-			<p>I'm currently a masters student at MIT's CSAIL researching <strong>robotics and deep reinforcement learning</strong> with <a  target="_blank" href="https://people.csail.mit.edu/pulkitag/">Prof. Pulkit Agrawal</a>. I'm specifically interested in intrinsic motivation, and its application to continual learning. I grew up in Berkeley CA, and did my undergraduate at MIT where I double majored in <strong>Physics and Electrical Engineering and Computer Science</strong>. In my free time I like fixing bikes, playing the piano, and spending time with my family!
+			<p>I'm currently a masters student at MIT's CSAIL researching <strong>robotics</strong> with <a  target="_blank" href="https://people.csail.mit.edu/pulkitag/">Prof. Pulkit Agrawal</a>. I'm specifically interested in intrinsic motivation, and its application to continual learning. I grew up in Berkeley CA, and did my undergraduate at MIT where I double majored in <strong>Physics and Electrical Engineering and Computer Science</strong>. In my free time I like fixing bikes, playing the piano, and spending time with my family!
             </p>
 
             <!-- Projects -->
